@@ -153,6 +153,7 @@ static void _config_init_reload(struct mqtt3_config *config)
 	config->retry_interval_s = 20;
 	config->store_clean_interval_s = 10;
 	config->sys_interval_s = 10;
+	config->upgrade_outgoing_qos = false;
 	if(config->auth_options){
 		for(i=0; i<config->auth_option_count; i++){
 			_mosquitto_free(config->auth_options[i].key);
@@ -1624,6 +1625,8 @@ int _config_read_file(struct mqtt3_config *config, bool reload, const char *file
 #else
 					_mosquitto_log_printf(NULL, MOSQ_LOG_WARNING, "Warning: Bridge support not available.");
 #endif
+				}else if(!strcmp(token, "upgrade_outgoing_qos")){
+					if(_conf_parse_bool(&token, token, &config->upgrade_outgoing_qos, saveptr)) return MOSQ_ERR_INVAL;
 				}else if(!strcmp(token, "use_identity_as_username")){
 #ifdef WITH_TLS
 					if(reload) continue; // Listeners not valid for reloading.
